@@ -25,6 +25,7 @@ TODO :
 	vm : optimized global fields cache
 	std : string_split doesn't copy the string anymore if the pattern is not found
 	vm : added neko_vm_dump_stack
+	std : use per-thread locale on POSIX systems
 
 2008-07-28 : 1.7.1
 	nekotools : fixed set_return_code in web server
